--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
+    "koa-csrf": "^3.0.6",
     "koa-favicon": "^2.0.0",
     "koa-logger": "^3.0.1",
     "koa-router": "^7.2.1",
