--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "html-webpack-plugin": "^2.29.0",
     "material-ui": "next",
     "mobx-react-devtools": "^4.2.15",
+    "node-sass": "^4.5.3",
     "prop-types": "^15.5.10",
     "react-tap-event-plugin": "^2.0.1",
     "rxjs": "^5.4.2",
+    "sass-loader": "^6.0.6",
     "socket.io-client": "^2.0.3",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
@@ -30,6 +32,7 @@
   "dependencies": {
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
